--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,12 @@
 
 # dependencies
 /node_modules
+/backend/node_modules
+/backend/node_modules/
+backend/node_modules/
+/backend/.env
+/backend/.env/
+backend/.env/
 /.pnp
 .pnp.js
 
