--- a/package.json
+++ b/package.json
@@ -7,31 +7,26 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/express": "^4.17.13",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^16.11.11",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-router-dom": "^5.3.2",
     "axios": "^0.21.1",
-    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "mongoose": "^6.0.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
-    "shortid": "^2.2.16",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "craco start",
     "build": "craco build",
-    "watch": "nodemon backend",
+    "watch": "nodemon --exec ts-node backend",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build:server": "tsc ./backend --outDir ./backend/dist"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "autoprefixer": "^9",
     "nodemon": "^2.0.15",
     "postcss": "^7",
