--- a/package.json
+++ b/package.json
@@ -15,18 +15,29 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
+     "@babel/preset-env": "^7.16.4",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/register": "^7.16.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.11",
+    "@types/shortid": "^0.0.29",
+    "next": "latest",
+    "cors": "^2.8.5",
+    "ignore-styles": "^5.0.1",
+    "mongoose": "^6.0.14",
+    "shortid": "^2.2.16",
+    "ts-node": "^10.4.0",
     "react-scripts": "4.0.3",
     "sass": "^1.44.0",
     "typescript": "^4.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "watch": "nodemon --exec ts-node backend",
+     "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "test": "craco test",
-    "eject": "react-scripts eject",
-    "build:server": "tsc ./backend --outDir ./backend/dist"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
